--- a/package.json
+++ b/package.json
@@ -18,24 +18,34 @@
   },
   "dependencies": {
     "@ic-reactor/react": "^1.14.6",
+    "@tailwindcss/vite": "^4.0.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
+    "@types/node": "^22.13.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "cross-fetch": "^4.0.0",
     "dotenv": "^16.4.5",
     "ic-mops": "^1.1.1",
     "jsdom": "^22.1.0",
     "mo-dev": "^0.13.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.5.2",
     "prettier": "^3.4.1",
     "prettier-plugin-motoko": "^0.10.1",
     "sass": "^1.81.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "vite": "^6.0.1",
     "vite-plugin-environment": "^1.1.3",
