--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "typescript": "^5.7.2",
     "vite": "^6.0.1",
     "vite-plugin-environment": "^1.1.3",
-    "vitest": "^2.1.6"
+    "vitest": "^2.1.6",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
