--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,6 +9,8 @@ tasks:
       sudo apt-get install -q -y libunwind-dev
       DFXVM_INIT_YES=1 sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
       source "$HOME/.local/share/dfx/env"
+      rustup target add wasm32-unknown-unknown
+      cargo install cargo-watch
       dfx start --background --clean
       npm run setup
     init: |
@@ -19,6 +21,7 @@ tasks:
 vscode:
   extensions:
     - dfinity-foundation.vscode-motoko
+    - rust-lang.rust-analyzer
 
 ports:
   - name: Replica
