--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,7 +9,7 @@ tasks:
       sudo apt-get install -q -y libunwind-dev
       DFXVM_INIT_YES=1 sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
       source "$HOME/.local/share/dfx/env"
-      rustup target add wasm32-unknown-unknown
+      rustup target add wasm32-wasip1
       cargo install cargo-watch
       dfx start --background --clean
       npm run setup
