--- a/package.json
+++ b/package.json
@@ -20,20 +20,32 @@
   },
   "dependencies": {
     "@dfinity/auth-client": "^2.3.0",
+    "@hookform/resolvers": "^4.1.2",
     "@ic-reactor/react": "^1.14.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "country-data-list": "^1.4.0",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-circle-flags": "^0.0.23",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "react-router": "^7.2.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
