--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
   },
   "dependencies": {
     "@dfinity/auth-client": "^2.3.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^4.1.2",
     "@ic-reactor/react": "^1.14.6",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.2.6",
     "@tailwindcss/vite": "^4.0.7",
     "class-variance-authority": "^0.7.1",
@@ -37,6 +41,7 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
     "next-themes": "^0.4.4",
+    "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-circle-flags": "^0.0.23",
     "react-dom": "^18.3.1",
