--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -41,12 +42,14 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "country-data-list": "^1.4.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-circle-flags": "^0.0.23",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
