--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "react-router": "^7.2.0",
+    "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
