--- a/backend_ai/Cargo.toml
+++ b/backend_ai/Cargo.toml
@@ -19,4 +19,5 @@ prost = "0.11.0"
 prost-types = "0.11.0"
 serde = { version = "1.0", features = ["derive"] }
 tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }
+tokenizers = { version = "0.20.1", default-features = false, features = ["unstable_wasm"] }
 
